# mtu-voting-system

./: .env.example  .gitignore  app.py  pyproject.toml
authentication/: auth.py  hashing.py  tokens.py
client/: __init__.py  response.py
database/: schema.py
exceptions/: custom_exception.py
repository/: admin.py  candidate.py  department.py  elections.py  otp.py  student.py  vote.py
routers/: admin.py  auth.py  department.py  student.py
utils/: func.py  mail.py  query.py  storage.py  task.py  upload.py  validate.py
