[tool.poetry]
name = "mtu voting system"
version = "0.1.0"
description = ""
authors = ["dakohhh <wiizzydreadmill@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
mongoengine = "^0.28.2"
cloudinary = "^1.40.0"
uvicorn = "^0.30.1"
certifi = "^2024.6.2"
bcrypt = "^4.1.3"
python-dotenv = "^1.0.1"
PyJWT = "^2.8.0"
email-validator = "^2.1.1"
fastapi-mail = "^1.4.1"
beanie = "^1.26.0"
python-multipart = "^0.0.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
